--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Himanshu</title>
     <link rel="stylesheet" href="index.css">
+    <!-- <link rel="icon"  type="image/x-icon" href="/images/favicon.ico.jpg"> -->
 </head>
 <body>
     <section class="header">
@@ -15,16 +16,25 @@
                     <span class="name">
                         Himanshu Suthar
                     </span>
-                    , web designer, developer & photographer, currently pursuing CS.
+                    , web designer, developer & <a  target=”blank” href="https://www.instagram.com/hmxnsu/">photographer</a>, currently pursuing CS.
                 </h1>
             </header>
             <nav class="nav">
-                <a href="">Instagram.</a>
-                <a href="">Twitter.</a>
-                <a href="">Github.</a>
+                <a  target=”blank” href="https://www.instagram.com/hmxnsu/">Instagram.</a>
+                <a  target=”blank” href="https://twitter.com/verareyou">Twitter.</a>
+                <a  target=”blank” href="https://github.com/hmnsuu">Github.</a>
+                <a href="#">scroll.</a>
                 <br>
-                <a class="inspired" href="">inspired by <br> John O'Nolan</a>
+                <a class="inspired"  target=”blank” href="https://john.onolan.org/">inspired by <br> John O'Nolan</a>
+                
             </nav>
+        </div>
+    </section>
+    <section class="fuck">
+        <div class="off">
+            <h3>
+                fuck off.
+            </h3>
         </div>
     </section>
 </body>
