--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section class="fuck">
         <div class="off">
             <h3>
-                fuck off
+                fuck. off.
             </h3>
         </div>
     </section>
