--- a/index.html
+++ b/index.html
@@ -16,16 +16,14 @@
                     <span class="name">
                         Himanshu Suthar
                     </span>
-                    , web designer, developer & <a  target=”blank” href="https://www.instagram.com/hmxnsu/">photographer</a>, currently pursuing CS.
+                    , web designer, developer & <a href="https://www.instagram.com/hmxnsu/">photographer</a><span class="span">.</span>, currently pursuing CS.
                 </h1>
             </header>
             <nav class="nav">
-                <a  target=”blank” href="https://www.instagram.com/hmxnsu/">Instagram.</a>
-                <a  target=”blank” href="https://twitter.com/verareyou">Twitter.</a>
-                <a  target=”blank” href="https://github.com/hmnsuu">Github.</a>
+                <a href="https://www.instagram.com/hmxnsu/">Instagram.</a>
+                <a href="https://twitter.com/verareyou">Twitter.</a>
+                <a href="https://github.com/hmnsuu">Github.</a>
                 <a href="#">scroll.</a>
-                <br>
-                <a class="inspired"  target=”blank” href="https://john.onolan.org/">inspired by <br> John O'Nolan</a>
                 
             </nav>
         </div>
