--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </h1>
             </header>
             <nav class="nav">
-                <a href="https://www.instagram.com/hmxnsu/">Instagram.</a>
+                <a href="https://www.instagram.com/hmxnsu/">Instagram..</a>
                 <a href="https://twitter.com/verareyou">Twitter.</a>
                 <a href="https://github.com/hmnsuu">Github.</a>
                 
