--- a/index.html
+++ b/index.html
@@ -34,5 +34,26 @@
             </h3>
         </div>
     </section>
+    <script>
+        // define a function that sets min-height of my-element to window.innerHeight:
+
+        const setHeight = () => {
+            document.getElementById("my-element").style.minHeight = window.innerHeight + "px"
+        };
+
+        // define mobile screen size:
+
+        let deviceWidth = window.matchMedia("(max-width: 1024px)");
+
+        if (deviceWidth.matches) {
+        // set an event listener that detects when innerHeight changes:
+
+            window.addEventListener("resize", setHeight);
+
+        // call the function once to set initial height:
+
+            setHeight();
+        }
+    </script>
 </body>
 </html>
