--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="icon"  type="image/x-icon" href="/images/icon.png">
 </head>
-<body>
+<body id="my-element">
     <section class="header">
         <div class="inheader">
             <header>
@@ -20,7 +20,7 @@
                 </h1>
             </header>
             <nav class="nav">
-                <a href="https://www.instagram.com/hmxnsu/">Instagram.</a>
+                <a href="https://www.instagram.com/hmxnsu/">Instagram..</a>
                 <a href="https://twitter.com/verareyou">Twitter.</a>
                 <a href="https://github.com/hmnsuu">Github.</a>
                 
