--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="index.css">
     <link rel="icon"  type="image/x-icon" href="/images/icon.png">
 </head>
-<body id="left">
-    <section class="header">
+<body>
+    <section class="header" id="header">
         <div class="inheader">
             <header>
                 <h1>
@@ -38,7 +38,7 @@
         function resize()
             {
                 var heights = window.innerHeight;
-                document.getElementById("left").style.height = heights -50 + "px";
+                document.getElementById("header").style.height = heights -50 + "px";
             }
             resize();
             window.onresize = function() {
