--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         function resize()
             {
                 var heights = window.innerHeight;
-                document.getElementById("header").style.height = heights -50 + "px";
+                document.getElementById("header").style.height = heights  + "px";
             }
             resize();
             window.onresize = function() {
