--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
         </div>
     </section>
     <script>
-        // function resize()
-        //     {
-        //         var heights = window.innerHeight;
-        //         document.getElementById("header").style.height = heights  + "px";
-        //     }
-        //     resize();
-        //     window.onresize = function() {
-        //         resize();
-        //     };
+        function resize()
+            {
+                var heights = window.innerHeight;
+                document.getElementById("header").style.height = heights  + "px";
+            }
+            resize();
+            window.onresize = function() {
+                resize();
+            };
     </script>
 </body>
 </html>
