--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </h3>
         </div>
     </section>
-    <script>
+    <!-- <script>
         function resize()
             {
                 var heights = window.innerHeight;
@@ -44,6 +44,6 @@
             window.onresize = function() {
                 resize();
             };
-    </script>
+    </script> -->
 </body>
 </html>
