--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon"  type="image/x-icon" href="/images/icon.png">
 </head>
 <body>
-    <section class="header" id="header">
+    <section  class="header" id="header">
         <div class="inheader">
             <header>
                 <h1>
@@ -23,6 +23,7 @@
                 <a href="https://www.instagram.com/hmxnsu/">Instagram.</a>
                 <a href="https://twitter.com/verareyou">Twitter.</a>
                 <a href="https://github.com/hmnsuu">Github.</a>
+            
                 
             </nav>
         </div>
@@ -30,7 +31,7 @@
     <section class="fuck">
         <div class="off">
             <h3>
-                fuck. off.
+                fin<span class="span">.</span>
             </h3>
         </div>
     </section>
