--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <span class="name">
                         Himanshu Suthar
                     </span>
-                    , web designer, developer & <a href="https://www.instagram.com/hmxnsu/">photographer</a><span class="span">.</span>, currently pursuing CS.
+                    , web designer, developer & <a id="instaa" href="https://www.instagram.com/hmxnsu/">photographer</a><span class="span">.</span>, currently pursuing CS.
                 </h1>
             </header>
             <nav class="nav">
