--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <span class="name">
                         Himanshu Suthar
                     </span>
-                    , web designer, developer & <a id="instaa" href="https://www.instagram.com/hmxnsu/">photographer</a><span class="span">.</span>, currently pursuing CS.
+                    , web designer, developer & <marquee style=" width: 230px;"  scrollamount="25" ><a id="instaa" href="https://www.instagram.com/hmxnsu/">photographer</a></marquee><span class="span">.</span>, currently pursuing CS.
                 </h1>
             </header>
             <nav class="nav">
@@ -35,16 +35,5 @@
             </h3>
         </div>
     </section>
-    <!-- <script>
-        function resize()
-            {
-                var heights = window.innerHeight;
-                document.getElementById("header").style.height = heights  + "px";
-            }
-            resize();
-            window.onresize = function() {
-                resize();
-            };
-    </script> -->
 </body>
 </html>
