--- a/index.html
+++ b/index.html
@@ -1,39 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Himanshu</title>
-    <link rel="stylesheet" href="index.css">
-    <link rel="icon"  type="image/x-icon" href="/images/icon.png">
+    <link rel="stylesheet" href="index.css" />
+    <link rel="icon" id="favicon" type="image/x-icon" href="/images/icon.png" />
 </head>
-<body>
-    <section  class="header" id="header">
-        <div class="inheader">
-            <header>
-                <h1>
-                    <span class="name">
-                        Himanshu Suthar
-                    </span>
-                    , web designer, developer & <marquee style=" width: 230px;"  scrollamount="25" ><a id="instaa" href="https://www.instagram.com/hmxnsu/">photographer</a></marquee><span class="span">.</span>, currently pursuing CS.
-                </h1>
-            </header>
-            <nav class="nav">
-                <a href="https://www.instagram.com/hmxnsu/">Instagram.</a>
-                <a href="https://twitter.com/verareyou">Twitter.</a>
-                <a href="https://github.com/hmnsuu">Github.</a>
-            
-                
-            </nav>
-        </div>
+  <body>
+    <section class="header" id="header">
+      <div class="inheader">
+        <header>
+          <h1>
+            <span class="name"> Himanshu</span>, web designer, developer &
+            <marquee style="width: 350px" scrollamount="25"
+              ><a id="instaa" href="https://www.instagram.com/hmxnsu/"
+                >photographer</a
+              ></marquee
+            ><span class="span">.</span>, currently pursuing CS.
+          </h1>
+        </header>
+        <nav class="nav">
+          <a href="https://www.instagram.com/hmxnsu/">Instagram.</a>
+          <a href="https://twitter.com/verareyou">Twitter.</a>
+          <a href="https://github.com/hmnsuu">Github.</a>
+          <a style="cursor: pointer" id="modebtn">Dark.</a>
+        </nav>
+      </div>
     </section>
     <section class="fuck">
-        <div class="off">
-            <h3>
-                fin<span class="span">.</span>
-            </h3>
-        </div>
+      <div class="off">
+        <h3>fin<span class="span">.</span></h3>
+      </div>
     </section>
-</body>
+
+    <script src="main.js"></script>
+  </body>
 </html>
