fixed some issues

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </nav>
       </div>
     </section>
-    <section class="fuck">
-      <div class="off">
+    <section id="fuck" class="fuck">
+      <div id="off" class="off">
         <h3>fin<span class="span">.</span></h3>
       </div>
     </section>
