fixed some more issues

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Himanshu</title>
     <link rel="stylesheet" href="index.css" />
-    <link rel="icon" id="favicon" type="image/x-icon" href="/images/icon.png" />
+    <link rel="icon" type="image/x-icon" href="/images/icon.png" />
 </head>
   <body>
     <section class="header" id="header">
