--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <a href="https://www.instagram.com/hmxnsu/">Instagram.</a>
           <a href="https://twitter.com/verareyou">Twitter.</a>
           <a href="https://github.com/hmnsuu">Github.</a>
-          <a style="cursor: pointer" id="modebtn">Dark.</a>
+          <a style="cursor: pointer" id="modebtn"><span id="modebtnspan">Dark.</span></a>
         </nav>
       </div>
     </section>
