--- a/index.html
+++ b/index.html
@@ -7,28 +7,30 @@
     <title>Himanshu</title>
     <link rel="stylesheet" href="index.css" />
     <link rel="icon" type="image/x-icon" href="/images/icon.png" />
-</head>
+  </head>
   <body>
-    <section class="header" id="header">
-      <div class="inheader">
-        <header>
-          <h1>
-            <span class="name"> Himanshu</span>, web designer, developer &
-            <marquee style="width: 350px" scrollamount="25"
-              ><a id="instaa" href="https://www.instagram.com/hmxnsu/"
-                >photographer</a
-              ></marquee
-            ><span class="span">.</span>, currently pursuing CS.
-          </h1>
-        </header>
-        <nav class="nav">
-          <a href="https://www.instagram.com/hmxnsu/">Instagram.</a>
-          <a href="https://twitter.com/verareyou">Twitter.</a>
-          <a href="https://github.com/hmnsuu">Github.</a>
-          <a style="cursor: pointer" id="modebtn"><span id="modebtnspan">Dark.</span></a>
-        </nav>
-      </div>
+    <section class="outer">
+
+      <div class="fluidbox" id="fluidbox" ></div>
+      <section class="header" id="header">
+        <div class="inheader">
+          <header>
+            <h1>
+              <span class="name"> Himanshu</span>, web designer, developer &
+              <a id="instaa" href="https://www.instagram.com/hmxnsu/">photographer</a>
+                <span class="span">.</span>, currently pursuing CS.
+            </h1>
+          </header>
+          <nav class="nav">
+            <a style="cursor: pointer" id="modebtn"><span id="modebtnspan">dark</span></a>
+            <a href="https://www.instagram.com/hmxnsu/">instagram</a>
+            <a href="https://twitter.com/verareyou">twitter</a>
+            <a href="https://github.com/hmnsuu">github</a>
+          </nav>
+        </div>
+      </section>
     </section>
+
     <section id="fuck" class="fuck">
       <div id="off" class="off">
         <h3>fin<span class="span">.</span></h3>
